fix: "home" button on mobile view

--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -3,20 +3,24 @@
 header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 
-    li {
+    ul {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        width: 100%;
+        justify-content: space-between;
         list-style-type: none;
-        gap: 32px;
-
-        ul {
+        
+        .nav {
+            display: flex;
             flex-direction: column;
-            padding-bottom: 1rem;
+            align-items: center;
+            gap: 16px;
+        }
+
+        li {
+            flex-direction: column;
         }
     }
 
@@ -51,11 +55,18 @@ header {
     .menu {
         display: none;
 
+        #home {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-bottom: 12px;
+        }
+        
         &.is-open {
             display: block;
             position: absolute;
-            top: 4.5rem;
-            right: .4rem;
+            top: 2.8rem;
+            right: 0rem;
             background-color: $white-text-color-500;
             width: 100%;
 
@@ -68,10 +79,14 @@ header {
             padding: 0 10px;
             display: block;
             font-size: 0.6rem;
+
+            &:nth-last-child(4) {
+                padding-top: 12px;
+            }
         }
     }
 
-    #home, #contact {
+    #contact {
         display: none;
     }
 
@@ -84,6 +99,7 @@ header {
     from {
         width: 0;
     }
+
     to {
         width: 100%;
     }
@@ -94,6 +110,10 @@ header {
         display: none !important;
     }
     
+    .nav {
+        flex-direction: row !important;
+    }
+
     .menu {
         display: flex !important;
     }
@@ -101,5 +121,4 @@ header {
     #home, #contact {
         display: inline !important;
     }
-    
 }
